CloudFormation/AWS2022_15_ECS/no_use/ecs_1_create_vpc_nets.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Create VPC and Nets For AWS2022_15_ECS

Resources:
  # Internet网关
  CFInternetGW:
      Type: "AWS::EC2::InternetGateway"
      Properties:
          Tags:
              - Key: Name
                Value: CFInternetGW
  # VPC
  QYTVPC:
    Type: "AWS::EC2::VPC"
    DeletionPolicy: Delete
    Properties:
      CidrBlock: 10.6.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: QYT_ECS_VPC

  # 关联Internet GW到VPC
  AttachGW:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref QYTVPC
      InternetGatewayId: !Ref CFInternetGW

  # 网络OutsideNet1
  OutsideNet1:
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: Delete
    Properties:
      AvailabilityZone: # 选择第一个（0）AZ
        "Fn::Select":
          - 0
          - "Fn::GetAZs": ""
      CidrBlock: 10.6.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: OutsideNet1
      VpcId: !Ref QYTVPC

  # 网络OutsideNet2
  OutsideNet2:
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: Delete
    Properties:
      AvailabilityZone: # 选择第一个（0）AZ
        "Fn::Select":
          - 2
          - "Fn::GetAZs": ""
      CidrBlock: 10.6.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: OutsideNet2
      VpcId: !Ref QYTVPC

  # 网络ECS_Net1
  ECSNet1:
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: Delete
    Properties:
      AvailabilityZone: # 选择第一个（0）AZ
        "Fn::Select":
          - 0
          - "Fn::GetAZs": ""
      CidrBlock: 10.6.11.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ECS_Net1
      VpcId: !Ref QYTVPC

  # 网络ECS_Net2
  ECSNet2:
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: Delete
    Properties:
      AvailabilityZone: # 选择第一个（0）AZ
        "Fn::Select":
          - 2
          - "Fn::GetAZs": ""
      CidrBlock: 10.6.12.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ECS_Net2
      VpcId: !Ref QYTVPC

  # 申请EIP
  NATEIP:
    Type: "AWS::EC2::EIP"

  # 创建NAT Gateway关联子网和EIP
  NATGW:
      Type: "AWS::EC2::NatGateway"
      Properties:
          AllocationId: !GetAtt NATEIP.AllocationId
          SubnetId: !Ref OutsideNet1
          Tags:
              - Key: Name
                Value: GW

  # 路由表  OutsideRouteTable, 关联VPC
  OutsideRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref QYTVPC
      Tags:
        - Key: Name
          Value: OutsideRouteTable

  # 路由表  ECSRouteTable, 关联VPC
  ECSRouteTable:
      Type: "AWS::EC2::RouteTable"
      Properties:
          VpcId: !Ref QYTVPC
          Tags:
              - Key: Name
                Value: ECS_Route_Table

  # 关联子网OutsideNet1到路由表OutsideRouteTable
  OutsideNet1Association:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref OutsideRouteTable
      SubnetId: !Ref OutsideNet1

  # 关联子网OutsideNet2到路由表ECS_Route_Table1
  OutsideNet2Association:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref OutsideRouteTable
      SubnetId: !Ref OutsideNet2


  # 关联子网ECS_Net1到路由表ECS_Route_Table1
  ECSNET1Association:
      Type: "AWS::EC2::SubnetRouteTableAssociation"
      Properties:
          RouteTableId: !Ref ECSRouteTable
          SubnetId: !Ref ECSNet1

  # 关联子网ECS_Net2到路由表ECS_Route_Table2
  ECSNET2Association:
      Type: "AWS::EC2::SubnetRouteTableAssociation"
      Properties:
        RouteTableId: !Ref ECSRouteTable
        SubnetId: !Ref ECSNet2

  # 配置OutsideDefaultRoute路由表的默认路由
  OutsideDefaultRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref CFInternetGW
      RouteTableId: !Ref OutsideRouteTable

  # 配置ECSDefaultRoute路由表的默认路由
  ECSDefaultRoute:
      Type: "AWS::EC2::Route"
      Properties:
          DestinationCidrBlock: 0.0.0.0/0
          NatGatewayId: !Ref NATGW
          RouteTableId: !Ref ECSRouteTable

  # 配置SecurityGroup
  ECSSecurityGroup:
      Type: "AWS::EC2::SecurityGroup"
      Properties:
          GroupName: ecs_sg
          GroupDescription: Allow HTTP ,HTTPS and SSH
          VpcId: !Ref QYTVPC
          SecurityGroupIngress:
              - IpProtocol: tcp
                FromPort: 443
                ToPort: 443
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 80
                ToPort: 80
                CidrIp: 0.0.0.0/0
              - IpProtocol: tcp
                FromPort: 22
                ToPort: 22
                CidrIp: 0.0.0.0/0
          Tags:
            - Key: Name
              Value: ECS_SG

Outputs: # 输出内容，并且可以被其他Stack引用
    # AvailabilityZone1
    AZ1:
        Description: Availability Zone of the newly created Net-1
        Value: !GetAtt ECSNet1.AvailabilityZone

    # AvailabilityZone2
    AZ2:
        Description: Availability Zone of the newly created Net-2
        Value: !GetAtt ECSNet2.AvailabilityZone

    # VPCID, 输出名为${AWS::StackName}-VPCID
    VPCId:
        Description: VPC ID
        Value: !Ref QYTVPC
        Export:
            Name: !Sub ${AWS::StackName}-VPCID

    # 子网ECSNet1， 输出名为${AWS::StackName}-ECSNet1-ID
    ECSNet1:
        Description: The subnet ID of ECSNet1
        Value: !Ref ECSNet1
        Export:
            Name: !Sub ${AWS::StackName}-ECSNet1-ID

    # 子网ECSNet2， 输出名为${AWS::StackName}-ECSNet2-ID
    ECSNet2:
        Description: The subnet ID of ECSNet2
        Value: !Ref ECSNet2
        Export:
            Name: !Sub ${AWS::StackName}-ECSNet2-ID
    # 子网OutsideNet1， 输出名为${AWS::StackName}-OutsideNet1-ID
    OutsideNet1:
        Description: The subnet ID of OutsideNet1
        Value: !Ref OutsideNet1
        Export:
            Name: !Sub ${AWS::StackName}-OutsideNet1-ID

    # 子网OutsideNet2， 输出名为${AWS::StackName}-OutsideNet2-ID
    OutsideNet2:
        Description: The subnet ID of OutsideNet2
        Value: !Ref OutsideNet2
        Export:
            Name: !Sub ${AWS::StackName}-OutsideNet2-ID
    # 安全组， 输出名为${AWS::StackName}-ECSSecurityGroup-ID
    ECSSecurityGroup:
        Description: Security Allow HTTP and HTTPS
        Value: !Ref ECSSecurityGroup
        Export:
            Name: !Sub ${AWS::StackName}-ECSSecurityGroup-ID
